fix: scrollbar mobile menu

--- a/sass/main/_header.sass
+++ b/sass/main/_header.sass
@@ -86,7 +86,7 @@
   left: 0
   width: 100%
   height: 100%
-  overflow-y: auto
+  // overflow-y: auto
   z-index: 9999
   &_visible
     display: block
@@ -95,7 +95,7 @@
     top: 0
     left: 0
     width: 100%
-    min-height: 365px
+    // min-height: 365px
     display: flex
     flex-direction: column
     align-items: center
@@ -154,6 +154,11 @@
     &:not(:last-child)
       margin-bottom: 10px
 
+@media (max-height: 400px)
+  .menu
+    overflow-y: auto
+    &-container
+      min-height: 360px
 @media (min-width: 1201px)
   .burger
     &-button
